# fastapi-cadastro-produto

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
app/: main.py
app/core/: configs.py  database.py  deps.py
app/database/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 9b79cb0b8d62_add_categories_table.py  fbb7016a9403_add_product_table.py
app/models/: category_model.py  product_model.py  user_model.py
app/routes/: category_routes.py  poc_routes.py  product_routes.py  user_routes.py
app/schemas/: base.py  category.py  product.py  user.py
app/tests/: conftest.py
app/tests/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
app/tests/schemas/: test_category_schema.py  test_product_schema.py  test_user_schemas.py
app/tests/usecases/: test_category_usecases.py  test_product_usecases.py  test_user_usecases.py
app/usecases/: category_usecases.py  poc_usecases.py  product_usecases.py  user_usecases.py
